cmake_minimum_required(VERSION 3.17)

# Project Name
project(
    RayTracingInOneWeekend
    VERSION 0.0
    DESCRIPTION "Implementation of the Ray Tracing in One Weekend book."
    LANGUAGES CXX
)

# Options
option(BUILD_DOCUMENTATION "Build doxygen documentation." ON)

# Cross-platform compatibility.
if(UNIX AND NOT APPLE)
  set(LINUX TRUE)
endif()

# Discover macros.
list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_SOURCE_DIR}/cmake/macros")
include(Public)

# Testing.
if(BUILD_TESTING)
    enable_testing()
    list(APPEND CMAKE_CTEST_ARGUMENTS "--output-on-failure")
endif()

if(BUILD_DOCUMENTATION)
    file(
        COPY ${CMAKE_SOURCE_DIR}/README.md
        DESTINATION ${CMAKE_BINARY_DIR}
    )

    doxygen_documentation(
        doxygen_docs
        GENERATE_TAGFILE TRUE
        DOXYFILE ${CMAKE_SOURCE_DIR}/Doxyfile.in
        INPUTS
            ${CMAKE_CURRENT_SOURCE_DIR}/src/raytracing
    )
endif()

# Build targets.
add_subdirectory(thirdparty)
add_subdirectory(src)

# Install exported targets.
export_project(${CMAKE_SOURCE_DIR}/cmake/Config.cmake.in)
